          and implemented it in subclasses
        - cDensityEstBase etc: transformed() renamed to isTransformed(); 
          added setCellSize()
        - cLongHistogram: revised the way histogram cells are set up. Now it
          throws an error if all given constraints cannot be satisfied (so that
          numCells*cellSize==rangeMax-rangeMin, all integers)

	Files renamed (Note: simulation models should only refer to <omnetpp.h>!)
	     --OLD--          --NEW--
	     cconfig.h        cconfiguration.h
	     chist.h          chistogram.h
	     cllist.h         clinkedlist.h
	     cmsgheap.h       cmessageheap.h
	     coutvect.h       coutvector.h
	     cstat.h          cstatistic.h
	     cdensity.h       cdensityestbase.h
	     cstrtokenizer.h  cstringtokenizer.h
	     ctopo.h          ctopology.h
	     cfunction.h      cmathfunction.h
	     csimul.h         csimulation.h
	     ...

	* MSVC 6.0 support dropped (the compiler is over 10+ years old, and
	does not support many modern C++ features like covariant return types)

	* VC++ libs compiled with /MT (mulTithreaded C lib) with VC7.1 as well

	* out-of-directory build, and other Makefile changes

2008-02-24  Andras Varga

	* merged last diffs from head of the 3.x branch

2006-12-04  Andras Varga

	* added hasher.h, for cHasher to calculate simulation fingerprints

	* csimul.h: added method hasher() to provide access to fingerprint
	calculation for simulation models.

2006-11-15  Andras Varga

	* compat.h: removed some very old compatibility #defines

2006-11-12  Andras Varga

	* several methods and classes already marked as DEPRECATED in their
	documentations and doc/API-Changes.txt are now marked as such with GCC's
	__attribute__((__deprecated__)) facility, which results in warnings
	during compilation of code that uses them. Those pieces of code need
	to be changed in order to be compatible with future OMNeT++ versions.
	MSVC equivalent is __declspec(deprecated).

	* defs.h: added _OPPDEPRECATED macro
